# cmake-qt5-template

./: .travis.ci  CMakeLists.txt  CMakeLists.txt.autosave  README.md
resources/: resources.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.hpp
